kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: docker.io/dbrac/url_shortener:1.0
          ports:
            - containerPort: 8000
          securityContext:
            runAsUser: 1000
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
 name: url-shortener-svc
 labels:
   app: url-shortener
spec:
 ports:
   - port: 80
     protocol: TCP
     targetPort: 8000
 selector:
   app: url-shortener
 type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: url-shortener-ingress-full
spec:
 ingressClassName: nginx
 rules:
   - host: d.b
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: url-shortener-svc
             port:
               number: 80
